--- a/login.html
+++ b/login.html
@@ -20,9 +20,63 @@
         />
 
         <div class="filterBackground">
-            
-        </div>
+          <div class="logo">
+            <svg
+              width="160"
+              height="75"
+              viewBox="0 0 160 75"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g filter="url(#filter0_b_15_2)">
+                <rect width="160" height="75" fill="white" fill-opacity="0.3" />
+              </g>
+              <path
+                d="M18 47.5V30H33V32.5H35.5V37.5H33V40H35.5V45H33V47.5H18ZM23 37.5H30.5V32.5H23V37.5ZM23 45H30.5V40H23V45ZM45.5 32.5V30H50.5V32.5H45.5ZM40.5 47.5V45H45.5V37.5H43V35H50.5V45H55.5V47.5H40.5ZM58 47.5V35H73V37.5H75.5V47.5H70.5V37.5H63V47.5H58ZM80.5 47.5V45H78V42.5H80.5V40H90.5V37.5H80.5V35H93V37.5H95.5V47.5H80.5ZM83 45H90.5V42.5H83V45ZM105.5 37.5H108V40H105.5V47.5H100.5V35H105.5V37.5ZM115.5 35V37.5H108V35H115.5ZM120.5 50V47.5H130.5V45H120.5V42.5H118V35H123V42.5H130.5V35H135.5V47.5H133V50H120.5Z"
+                fill="white"
+              />
+              <defs>
+                <filter
+                  id="filter0_b_15_2"
+                  x="-80"
+                  y="-80"
+                  width="320"
+                  height="235"
+                  filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB"
+                >
+                  <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                  <feGaussianBlur in="BackgroundImage" stdDeviation="40" />
+                  <feComposite
+                    in2="SourceAlpha"
+                    operator="in"
+                    result="effect1_backgroundBlur_15_2"
+                  />
+                  <feBlend
+                    mode="normal"
+                    in="SourceGraphic"
+                    in2="effect1_backgroundBlur_15_2"
+                    result="shape"
+                  />
+                </filter>
+              </defs>
+            </svg>
+          </div>
 
+          <div class="message">
+            <h2>We are</h2>
+            <h1>Invite online right now.</h1>
+
+            <div class="paragraphe">
+              <p>10 people have joined team.</p>
+              <p>We invite you to join the tribe team.</p>
+            </div>
+          </div>
+
+          <p class="glass-account">
+            Already don't have account ? <a href="#">Sing up</a>
+          </p>
+        </div>
       </section>
 
       <section class="right">
@@ -97,13 +151,13 @@
           <div class="email">
             <label for="email">Email address</label>
             <input type="email" />
-            <span>error</span>
+            <span></span>
           </div>
 
           <div class="password">
             <label for="password">password</label>
             <input type="password" />
-            <span>error</span>
+            <span></span>
           </div>
 
           <button type="submit">Sing in</button>
