ajout font size sur la version pc

--- a/login.html
+++ b/login.html
@@ -141,7 +141,7 @@
             </defs>
           </svg>
         </div>
-        <h1>Sing in</h1>
+        <h1 class="sing-in">Sing in</h1>
         <div class="join">
           <h2>We are</h2>
           <h3>Invite online right now.</h3>
