--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
 
           <p class="glass-account">
-            Already don't have account ? <a href="#">Sing up</a>
+            Already don't have account ? <a href="sing-up.html">Sing up</a>
           </p>
         </div>
       </section>
@@ -170,7 +170,7 @@
         <hr />
 
         <p class="sing-up">
-          Already don't have account ? <a href="#">Sing up</a>
+          Already don't have account ? <a href="sing-up.html">Sing up</a>
         </p>
       </section>
     </main>
