--- a/sing-up.html
+++ b/sing-up.html
@@ -165,6 +165,7 @@
             </div>
 
             <button type="submit">Sing in</button>
+            <p class="exist-not-exist"></p>
         </form>
 
         <hr />
