Fix: requete sql pour add user seulment si il n'existe pas dans la bdd

--- a/sing-up.html
+++ b/sing-up.html
@@ -102,12 +102,12 @@
             <hr />
 
             <p class="sing-up">
-                Already have an account ? <a href=".login.php">Sing in</a>
+                Already have an account ? <a href="index.html">Sing in</a>
             </p>
         </section>
     </main>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
